VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc3Up.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [24MB/455.1MB][  5%][==>                                               ][6MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][9.6MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][10.67MB/s]  [80MB/455.1MB][ 17%][========>                                         ][11.43MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][13MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][14.22MB/s]  [152MB/455.1MB][ 33%][================>                                 ][15.2MB/s]  [176MB/455.1MB][ 38%][===================>                              ][16MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][16.67MB/s]  [224MB/455.1MB][ 49%][========================>                         ][17.23MB/s]  [256MB/455.1MB][ 56%][============================>                     ][18.29MB/s]  [296MB/455.1MB][ 65%][================================>                 ][19.73MB/s]  [328MB/455.1MB][ 72%][====================================>             ][20.5MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][21.18MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][21.78MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][22.74MB/s]  [455.1MB/455.1MB][100%][==================================================][23.95MB/s]  [455.1MB/455.1MB][100%][==================================================][23.95MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_18099/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_18099/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
